deployment_strategy_demo/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bottle-demo
  labels:
    name: bottle-demo
    app: bottle-demo
