deployment_strategy_demo/05-deployment_maintenance.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bottle-demo
  name: bottle-demo-maintenance
  labels:
    app: bottle-demo-maintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottle-demo-maintenance
  template:
    metadata:
      labels:
        app: bottle-demo-maintenance
    spec:
      serviceAccountName: default
      containers:
      - name: bottle-demo-maintenance
        image: dschuldt/simple-maintenance-page:1.0
        ports:
        - name: http
          containerPort: 80
