deployment_strategy_demo/06-service_canary.yml
apiVersion: v1
kind: Service
metadata:
  name: bottle-demo-canary
  namespace: bottle-demo
  labels:
    app: bottle-demo
    version: "canary"
spec:
  type: ClusterIP
  selector:
    app: bottle-demo
  ports:
  - name: http
    port: 80
    targetPort: http
