deployment_strategy_demo/06-service_maintenance.yml
apiVersion: v1
kind: Service
metadata:
  name: bottle-demo-maintenance
  namespace: bottle-demo
  labels:
    app: bottle-demo-maintenance
spec:
  type: ClusterIP
  selector:
    app: bottle-demo-maintenance
  ports:
  - name: http
    port: 80
    targetPort: http
