deployment_strategy_demo/06-service_v1.1.yml
apiVersion: v1
kind: Service
metadata:
  name: bottle-demo-v1-1
  namespace: bottle-demo
  labels:
    app: bottle-demo
    version: "1.1"
spec:
  type: ClusterIP
  selector:
    app: bottle-demo
    version: "1.1"
  ports:
  - name: http
    port: 80
    targetPort: http
